[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-smartgrid-optima"
version = "0.1.0"
description = "SmartGrid-Optima: Smart Energy Management RL Environment for Bangalore, India"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "dummy_echo.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["dummy_echo", "dummy_echo.server"]
package-dir = { "dummy_echo" = ".", "dummy_echo.server" = "server" }